# nbc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: .main.rs.swp  entry.rs  main.rs  model.rs
src/commands/: build.rs
