[package]
name = "nbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
serde_json = { version = "1.0"}
serde = { version = "1.0", features = ["derive"] }

